rhsso/rhsso-standalone/base/sso-discovery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sso
  name: sso-discovery
spec:
  clusterIP: None
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sso
    component: keycloak
  sessionAffinity: None
  type: ClusterIP
