rhsso/rhsso-standalone/base/sso-postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sso
  name: sso-postgresql
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: sso
    component: database
  sessionAffinity: None
  type: ClusterIP
