rhsso/rhsso-standalone/base/sso-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: sso-x509-https-secret
  labels:
    app: sso
  name: sso
spec:
  ports:
  - name: keycloak
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: sso
    component: keycloak
  sessionAffinity: None
  type: ClusterIP
