rhsso/rhsso-standalone/base/sso-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  labels:
    app: sso
  name: sso
spec:
  port:
    targetPort: keycloak
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: sso
    weight: 100
  wildcardPolicy: None
